# stock_flow

./: .gitignore  README.md  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  backup_20260511_214021.dump  docker-compose.yml  pyproject.toml  requirements.txt  schema.yml
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_role.py  0002_user_business.py  0003_user_brand.py  0004_passwordresettoken.py  0005_user_display_name.py  0006_user_pin.py
backend/apps/admins/: serializers.py  urls.py  views.py
backend/apps/agents/: models.py  serializers.py  urls.py  views.py
backend/apps/agents/migrations/: 0001_initial.py  0002_agentitem.py  0003_agent_deactivated_at_agent_is_active.py  0004_agentitem_variant.py
backend/apps/business/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/business/migrations/: 0001_initial.py  0002_alter_brand_phone.py  (+1 more)
backend/apps/customers/: models.py  serializers.py  urls.py  views.py
backend/apps/dashboard/: urls.py  views.py
backend/apps/items/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/notification/: models.py  tasks.py  urls.py  views.py
backend/apps/orders/: models.py  serializers.py  urls.py  utils.py  views.py
backend/config/: settings.py  urls.py
backend/transports/: admin.py  models.py  serializers.py  urls.py  views.py
backend/transports/migrations/: 0001_initial.py
frontend/: next.config.ts  (+5 more)
(+347 files in other folders)
